Fix up troubleshooting lab build